examples/test/testpolicy3132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3132
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key28: value28
      key8: value28
      key3: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value25
          key26: value18
          key18: value36
      podSelector:
        matchLabels:
          key12: value44
          key13: value41
